# shortink

./: .gitignore  LICENSE  README.md  main.py  notes.MD  package-lock.json  pyproject.toml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_shortlink.py
backend/source/: main.py
backend/source/api/routes/: __init__.py  auth_routes.py  shortlink_routes.py
backend/source/config/: __init__.py  database.py  redis.py
backend/source/config/settings/: __init__.py  auth_setting.py  database_setting.py  redis_setting.py
backend/source/models/db/: shortlink_model.py  user_model.py
backend/source/models/schemas/: auth_schema.py  shortlink_schema.py
backend/source/repository/: __init__.py
backend/source/repository/crud/: __init__.py  shortlink_crud.py
backend/source/security/authorizations/: __init__.py
backend/source/security/hashing/: __init__.py
backend/source/security/verifications/: __init__.py
backend/source/utils/: base62.py
backend/source/utils/exceptions/http/: exc_400.py  exc_401.py  exc_403.py  exc_404.py
backend/tests/: conftest.py
backend/tests/unit_tests/: test_shortlink_routes.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: CreateForm.tsx  Header.tsx  ShortlinkList.tsx  ShortlinkRow.tsx  Toast.tsx
