[project]
name = "shortink"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asgi-lifespan>=2.1.0",
    "fastapi[standard]>=0.139.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.2.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.8",
    "sqlalchemy[standard]>=2.0.51",
    "redis>=8.0.1",
    "pyjwt>=2.13.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
]
